--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Enterprise-grade monitoring platform with real-time Zabbix intelligence and AI-powered insights" />
     <meta name="author" content="Jarvis" />
     <!-- <link rel="icon" href="/favicon.png" /> -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
+    <link rel="icon" type="image/png" sizes="64x64" href="/Avis2.png">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png"> -->
 
     <meta property="og:title" content="Jarvis™ - AI-Powered Monitoring" />
     <meta property="og:description" content="Enterprise-grade monitoring platform with AI-powered insights" />
